# web_hw_13

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
front-end/: index.html  script.js
front-end/versions/: 09d2960f389c_init.py  7c79737774e7_add_confirmed_feeld.py  8ad168548e6d_init.py  e76e41c813fd_add_table_users.py
migrations/: env.py
migrations/versions/: a9de7b8e7b1a_last.py
postgres-data/: postmaster.pid
postgres-data/base/1/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  16526  16529  16531  16532  16537  16538  16540  16542  16548  16549  16551  16553  16560  2224  2579  2604  2606  2606_fsm  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  (+8 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_xact/: 0000
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py
