[tool.poetry]
name = "web-hw-13"
version = "0.1.0"
description = ""
authors = ["FitisovArtem <109963097+FitisovArtem@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
fastapi = "^0.105.0"
alembic = "^1.13.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-asyncpg = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.5.2"}
uvicorn = "^0.24.0.post1"
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.0"
fastapi-limiter = "^0.1.5"
jinja2 = "^3.1.2"
cloudinary = "^1.37.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
